--- a/pages/P01政治关键词.md
+++ b/pages/P01政治关键词.md
@@ -1,6 +1,6 @@
 <h1 align="center">政治关键词</h1>
 
-<div align="right">最近更新时间：2023-12-9</div>
+<div align="right">最近更新时间：2023-12-17</div>
 
 ## 马原
 
@@ -20,21 +20,27 @@
 
 + 科学性、革命性
 
-+ 革命性：人民性（本质属性）、实践性（首要和基本观点）、发展性（与时俱进）
++ 革命性：人民性（本质属性）、实践性（首要和基本观点、区别点）、发展性（与时俱进）
 
 + 根本价值目标：人自由而全面的发展
 
++ 人发展的最根本是：人自由程度提高
+
 + 对其他权利观的根本区别：强调社会的物质生活条件对权利的制约和决定作用
+
++ 权利以义务为条件、义务以权利为依据
 
 ### 马原著作
 
 + 《关于费尔巴哈的提纲》（马）：天才萌芽的第一个文件、实践观点
 
++ 《德法年鉴》（马恩）：唯心向唯物，革命主义向共产主义完成转变
+
 + 《资本论》（马）：工人阶级的《圣经》
 
 + 《法兰西内战》（马）：巴黎公社历史教训，规定社会公仆：选举撤换、工资低老练
 
-+ 《哥达纲领批判》（马）：国际共产主义的纲领性文献
++ 《哥达纲领批判》（马）：国际共产主义的纲领性文献，进一步丰富科学社会主义
 
 + 《神圣家族》（马恩）：第一部合著、批判黑格尔唯心主义。论述历史唯物主义
 
@@ -48,20 +54,6 @@
 
 + 《唯物主义与经验批判主义》（列）：生活、实践，认识论首要和基本观点
 
-### 马原中国化
-
-+ 两个结合：中国实际、中国优秀传统文化
-
-+ 提出：六届六中
-
-+ 写入党章：七大
-
-+ 第一次飞跃：毛泽东思想(思想渊源)
-
-+ 中国化新飞跃：邓小平、三个代表、科学发展观
-
-+ 中国化时代化新飞跃：习近平新时代中国特色社会主义思想
-
 ### 唯物辩证法
 
 + 古代朴素唯物主义：金木水火土
@@ -74,15 +66,19 @@
 
 + 马克思主义、辩证唯物主义：唯物、运动、可知
 
-### 物质和意识
++ 辩证唯物主义的最基本、最核心，马克思主义的基石：物质统一性原理
 
-+ 物质特征：客观实在性、运动性、统一性
++ 唯物辩证法的实质和核心：对立统一规律
+
+#### 物质和意识
+
++ 物质特征：客观实在性、运动性(根本)、统一性
 
 + 意识特征：目的性、计划性、创造性
 
 + 人工智能：人理性性能的模拟、没有信念、意志、情感
 
-### 联系、发展和矛盾
+#### 联系、发展和矛盾
 
 + 联系特征：客观性、普遍性、多样性、条件性
 
@@ -90,7 +86,11 @@
 
 + 矛盾特征：斗争性(对立)、同一性(统一)、特殊性(个性)、普遍性(共性)、不平衡性(主次)
 
-### 实践和认识
++ 认识世界和改造世界的根本动力、基本矛盾：主客观矛盾
+
++ 事物的性质决定于：主要矛盾
+
+#### 实践和认识
 
 - 实践特征：客观实在性、主观能动性、社会历史性
 + 实践分类：物质生产实践(最基本)、社会政治实践、科学文化实践
@@ -103,11 +103,17 @@
 
 + 实践中介分类：物质性工具系统、语言符号工具系统
 
++ 实践客体：纳入实践主体实践活动范围的客观事物
+
 + 联系、两次飞跃：认识来源于实践，认识的目的是实践
 
 + 影响认识的因素：理性(指导、解释、预见)、非理性(激活、驱动、控制)
 
-### 真理
++ 真理和价值统一的基础：实践
+
++ 客观规律性和主观能动性统一的基础：实践
+
+#### 真理
 
 + 特征：客观性、一元性、绝对性、相对性
 
@@ -145,6 +151,14 @@
 
 + 四对矛盾、劳动二重性：具体抽象劳动、价值使用价值、商品货币、私人社会劳动(根源)
 
++ 具体劳动创造使用价值（不一定唯一）、抽象劳动创造价值（唯一源泉），
+
++ 商品转换成货币称为：商品的惊险的跳跃
+
++ 解决私人劳动和社会劳动的矛盾唯一途径：交换
+
++ 具体劳动能抽转为抽象劳动取决于：私人劳动和社会劳动能否统一
+
 + 理解政治经济学的枢纽：劳动二重性
 
 ### 剩余价值论
@@ -167,11 +181,19 @@
 
 + 判断社会主义的劳动是否具有生产性：是生产物质还是提供服务
 
++ 资本主义生产的绝对规律、唯一动机和直接目的：追求剩余价值
+
++ 追求剩余价值的结果：生产集中、资本集中
+
++ 剩余价值的生产过程，资本主义生产过程的主要方面：价值增值过程
+
 + 绝对剩余价值：加班
 
 + 相对剩余价值：科技进步
 
 + 资本积累内涵：剩余价值转化为资本
+
++ 资本积累的后果：社会失业根源、两极分化
 
 + 资本简单再生产：剩余价值用于消费、
 
@@ -187,15 +209,25 @@
 
 + 商品按生产价格出售而不是价值：并不违背价值规律，只是改变价值规律的实现形式，从个别部门看，平均利润与剩余价值不一致，从整体看，利润等于剩余价值
 
++ 价值规律的作用表现在：社会生产力发展、社会收入分配、生产资料和劳动力分配
+
++ 影响周转快慢的关键因素：周转时间、固定资产和流动资产构成
+
++ 资本积累规模大小：剥削程度、劳动生产率、所用资本所废资本、资本家预付资本
+
 + 相对过剩人口三种形式：流动、潜在、停滞
 
 + 资本循环三个阶段：购买阶段、生产阶段、售卖阶段
 
-+ 经济危机强制解决：强制让供需平衡
-
 + 资本主义的基本矛盾、经济危机的根本原因：生产的无限扩大和劳动人民支付能力的相对缩小、企业内部生产有组织和社会生产无政府
 
++ 经济危机抽象的一般可能性：货币作为流通、支付手段所导致的
+
 + 经济危机的本质特征：生产相对过剩
+
++ 经济危机的根本原因：资本主义基本矛盾 
+
++ 经济危机强制解决：强制让供需平衡
 
 + 资本主义政治制度的局限性：金钱操控下的民主、名义平等掩盖事实上不平等、政党恶斗效率低下、维护资产阶级统治
 
@@ -219,7 +251,13 @@
 
 + 垄断围绕垄断价格上下波动、违反价格的自由波动、不违反价值规律
 
++ 垄断不能消除竞争原因：经济条件、依靠竞争、不能全生产
+
++ 垄断和竞争的目的区别：高额利润巩固统治(垄断)，超额利润资本积累(竞争)
+
 #### 金融垄断
+
++ 金融垄断形成和壮大的制度条件：金融自由化与金融创新
 
 + 金融资本内涵：工业垄断、银行垄断融合
 
@@ -271,6 +309,8 @@
 
 + 科学社会主义的核心命题：社会主义必将取代资本主义
 
++ 社会主义必将取代资本主义决定于：资本主义内在矛盾
+
 + 科学社会主义的诞生：《共产党宣言》
 
 + 科学社会主义诞生的两大基石：唯物史观、剩余价值学说
@@ -289,9 +329,13 @@
 
 + 社会主义发展道路多样性的原因：生产力差异(根本原因)、文化传统差异(重要条件)、时代和实践发展(现实原因)
 
++ 社会主义建设历史长期性原因：生产力发展、经济基础上层建设发展、国际环境、需长期认识探索
+
 ### 共产主义
 
 + 基本特征：物质财富极大丰富、消费资料按需分配、社会高度和谐、人自由而全面发展(根本、现代化最终目标、马原价值目标)
+
++ 成为自然界的自觉的、真正的主人
 
 + 人类最美好的社会制度：共产主义
 
@@ -299,9 +343,13 @@
 
 ### 毛泽东思想
 
++ 萌芽：大革命时期，新民主义革命基本思想的提出
+
 + 形成：农村包围城市、武装夺取政权
 
 + 成熟：七大
+
++ 七大：思想上毛泽东思想、政治上高举旗帜、组织上政治家集团
 
 + 内容：实事求是(根本观点、根本要求)、群众路线(生命线、工作路线)、独立自主
 
@@ -309,21 +357,25 @@
 
 + 开启了**独立自主**解决中国革命实际问题的新阶段：遵义会议
 
++ 只革命、建设，不包括改革
+
 ### 新民主主义革命理论
 
-+ 基本依据：认清国情
++ 中国革命的基本依据和基本前提：认清国情
 
-+ 基本国情：半殖民半封建
++ 中国革命的基本国情：半殖民半封建
 
 + 中国革命的首要问题：分清敌我
 
-+ 主要矛盾：帝国主义和中华民族(最主要)、封建主义和人民大众
++ 中国革命的基本问题：农民问题
 
-+ 根本任务：推翻帝国主义(最主要)、封建主义、官僚主义
++ 中国革命的主要矛盾：帝国主义和中华民族(最主要)、封建主义和人民大众
 
-+ 总路线提出：《中国革命和中国共产党》
++ 中国革命的根本任务：推翻帝国主义(最主要，首要)、封建主义、官僚主义
 
-+ 总路线完整表述：《在晋绥干部会议上的讲话》
++ 新民主主义总路线提出：《中国革命和中国共产党》
+
++ 新民主主义总路线完整表述：《在晋绥干部会议上的讲话》
 
 + 中国革命的基本动力：无产阶级
 
@@ -331,7 +383,7 @@
 
 + 民族资产阶级的两面性：革命性和动摇性
 
-+ 中国革命取得胜利的根本保障：无产阶级领导，中国共产党的领导
++ 中国革命取得胜利的根本保障、核心问题：无产阶级领导，中国共产党的领导
 
 + 实现领导权的关键：工农联盟为基础的统一战线
 
@@ -349,6 +401,8 @@
 
 + 极具特色内容：保护民族工商业(原因：资产阶级性质、落后生产)
 
++ 新民主主义革命胜利标志着：彻底结束了旧中国一盘散沙的局面
+
 #### 人民军队
 
 + 人民军队建军的根本原则：党对军队的绝对领导(支部建在连上)
@@ -363,11 +417,13 @@
 
 #### 三大法宝
 
-+ 新民主主义三大法宝：统一战线、武装斗争、党的建设
++ 新民主主义三大法宝：统一战线、武装斗争（两个基本特点/武器）、党的建设
 
 + 统一战线：农民阶级、工人阶级、非劳动人民(原因：爱国、政治影响、经济技术)
 
 + 中国革命的主要形式：武装斗争
+
++ 中国革命的战略征地：农村革命根据地
 
 + 党建首位：政治建设
 
@@ -411,7 +467,11 @@
 
 + 开始摸索、摸索标志：《论十大关系》
 
++ 《论十大关系》基本方针：调动一切积极因素
+
 + 走有别于苏联的工业化道路：《关于正确处理人民内部矛盾的问题》
+
++ 矛盾是国家政治生活的主题根本着眼点：调动一切积极因素
 
 + 社会主义社会基本矛盾：非对抗性，又相适应(基本)，又相矛盾(非基本)
 
@@ -427,7 +487,9 @@
 
 + 民族之间：民族平等、团结互助
 
-+ 八大：稳中求进、三大主体三大补充
++ 建国后第一次党章：八大
+
++ 八大：集中力量发展社会生产力、稳中求进、三大主体三大补充
 
 + 现代化战略目标：农业(根基)、工业、国防、科技强国
 
@@ -445,23 +507,35 @@
 
 ### 邓小平理论
 
++ 关于真理问题的大讨论：《实践是检验真理的唯一标准》
+
++ 标志着拨正反乱胜利完成：《关于建国以来党的若干历史问题的决议》
+
 + 《关于建国以来党的若干历史问题的决议》最核心原则：坚持和发展毛泽东思想
 
-+ 社会主义提出：十二大
++ 十一届三中主题报告、改革开放宣言书：《解放思想、实事求是、团结一致向前看》
 
-+ 邓小平理论形成：十三大，社会主义是什么，怎么做
++ 开启改革开放和社会主义现代化建设的新时期：十一届三中全会
+
++ 中国特色社会主义提出：十二大
+
++ 邓小平理论形成：十三大（系统阐述中国特色社会主义是什么，怎么做）
 
 + 邓小平理论写入党章：十五大
 
-+ 第一次系统概括中国特色社会主义主要内容：十三大
++ 建设社会主义市场经济：十四大
 
-+ 思想路线：解放思想、实事求是
++ 邓小平理论只改革、建设，不包括革命
+
++ 思想路线、精髓：解放思想、实事求是
 
 + 一个中心：经济建设为中心
 
 + 两个基本点：自力更生、艰苦奋斗
 
 + 四项基本原则：坚持党领导、坚持社会主义道路、坚持马克思主义、坚持人民民主专政
+
++ 坚持中国特色社会主义的必由之路：改革开放、党的领导
 
 + 奋斗目标：富强、民主、文明社会主义现代化国家
 
@@ -471,7 +545,7 @@
 
 + 社会主义的目标：实现共同富裕
 
-+ 鲜明特征：改革开放
++ 改革开放鲜明特征和首要任务：解放和发展生产力
 
 + 改革开放的出发点和落脚点：更好实现和维护人民利益、让老百姓过上好日子
 
@@ -505,13 +579,29 @@
 
 + 内容：发展是什么，怎么做
 
++ 第一要义：发展
+
 + 核心立场：以人为本
 
 + 基本要求：全面协调可持续
 
++ 根本方法：统筹兼顾
+
 + 最鲜明的精神实质：解放思想、事实求是、与时俱进、求真务实
 
 ## 习近平
+
++ 中国特色社会主义进入新时代：十八大
+
+### 两个结合
+
+- 两个结合：中国实际、中国优秀传统文化
+
+- 马原中国化提出：六届六中
+
+- 马原中国化写入党章：七大
+
+- 第一次结合：毛泽东思想
 
 ### 科学体系
 
@@ -597,6 +687,8 @@
 
 + 党和人民最显著的精神标志，创建伟业必由之路：团结奋斗
 
++ 新时代我国发展壮大的必由之路：新发展理念
+
 + 爱国主义教育法鲜明主题：全面建设社会主义现代化强国、实现中华民族伟大复兴
 
 + 爱国主义教育法着力点：爱国、爱党、爱社会主义相统一，维护国家统一、民族团结
@@ -657,9 +749,13 @@
 
 - 一贯要求和根本方针：党要管党、从严治党
 
+- 治本之策：加强纪律建设
+
 - 政治建设的首要任务：服从中央、统一领导
 
 - 政治生活的首要任务、前提：加强思想教育和理论武装
+
+- 新时代的党建：长期执政能力、先进性和纯洁性建设
 
 - 作风问题的核心：党同人民群众的关系问题
 
@@ -670,6 +766,10 @@
 - 反腐败斗争的鲜明主题：标本兼治
 
 - 跳出历史周期第二个答案，最大优势：自我革命
+
+- 自我革命的重要途径：四个自我
+
+- 各种监督的第一位、最根本：党内监督
 
 - 跳出历史周期第一个答案：民主、群众路线
 
@@ -689,7 +789,9 @@
   
   推进国家治理体系和治理能力现代化——鲜明指向和时代要求
 
-+ 内在要求和基本目的：解放和增强社会活力
++ 改革的内在要求和基本目的：解放和增强社会活力
+
++ 改革开放的鲜明特征和首要目的：解放和发展社会生产力
 
 + 引领：总目标
 
@@ -719,7 +821,19 @@
 
 - 治国理政的基本方式：法治（道德不是基本方式，而是法治的支撑）
 
-- 四种权利保障：宪法保障、立法保障、行政保障、司法保障
+- 公民权利保障：宪法保障(前提基础)、立法保障(条件)、行政保障(关键)、司法保障(最后防线)
+
+- 法治同资本主义国家最大区别：坚持党的领导、党内法规体系的纳入
+
+- 法治道路的核心要义：党的领导、特色社会主义道路、特色社会主义法治理论
+
+- 法理至上体现：法律不可违反、普遍适用、优先适用
+
+- 法理不可违反：任何人违法都要受到惩罚
+
+- 法理强制性：区别于其他社会规范
+
+- 
 
 #### 法治体系
 
@@ -849,6 +963,8 @@
 
 + 教育的根本尺度：人民满意
 
++ 科技三步走：二十大创新型国家行列，2035创新型国家前列，2050创新强国
+
 + 国家强身之基、安全之要：科技自立自强
 
 + 国家强盛和民族复兴的战略基石：高水平自立自强
@@ -856,6 +972,8 @@
 + 最大隐患：核心技术受制于人
 
 + 科技创新的源头：基础研究
+
++ 攀登世界科技高峰必由之路：自主创新
 
 + 世界科技强国竞争的着力点：国家战略科技力量
 
@@ -902,6 +1020,12 @@
 + 文化的本质特征、生命所在：创新和创造
 
 + 决定社会主义文化事业前途命运的关键：坚持为人民服务、为社会主义服务的根本方向
+
++ 新时代文化使命：推动文化繁荣、建设文化强国、建设现代文明
+
++ 文艺和文艺工作的出发点和落脚点：满足人民精神文化需要
+
++ 文艺工作者的职责：弘扬中国精神、传播中国价值、凝聚中国力量
 
 + 新闻舆论工作的关键：管好用好互联网
 
@@ -960,6 +1084,10 @@
 + 长远看，高质量发展的根本依赖：高质量的生态环境
 
 ### 国家安全
+
++ 民族复兴的根基：国家安全
+
++ 国家强盛的前提：社会稳定
 
 + 中心、宗旨：人民安全
 
@@ -1025,6 +1153,8 @@
 
 + 宗旨：维护世界和平、促进共同发展
 
++ 原则：和平发展
+
 + 新型国际关系的新：合作共赢
 
 + 工作布局：大国(关键)，周边(首要)，发展中国家(基础)，多边(舞台)
@@ -1065,7 +1195,7 @@
 
 + 目标：自强，求富
 
-+ 首要目的：镇压太平天国起义，加强边防和发展
++ 首要目的：镇压太平天国起义，加强边防和发展(没有实质上做到)
 
 + 根本目的：维护封建统治
 
@@ -1109,11 +1239,15 @@
 
 + 严复：《天演论》，物竞天择适者生存
 
++ 上述人物的思想共同点：反侵略、独立富强爱国思想、一定程度反封建民主思想
+
 + 孙中山：振兴中华
 
 ### 辛亥革命
 
 + 近代以来中国发生的深刻社会变革由此拉开序幕
+
++ 第一个革命团体：兴中会
 
 + 中国第一个领导的资产阶级革命政党：同盟会
 
@@ -1133,7 +1267,7 @@
 
 ### 新文化运动
 
-+ 宣传资本主义，个人解放
++ 宣传资本 主义，个人解放
 
 + 为马克思主义传播准备思想条件
 
@@ -1154,6 +1288,10 @@
 + 直接导火索：巴黎和会上中国外交的失败
 
 + 五四精神的核心：爱国主义精神
+
++ 李大钊《我的马克思主义观》：标志着马克思主义系统传播
+
++ 五川运动：掀起了全国范围的大革命高潮
 
 ### 中国共产党
 
@@ -1177,7 +1315,7 @@
 
 + 武装夺取政权第一枪：南昌起义
 
-+ 井冈山革命根据地：秋收起义
++ 井冈山革命根据地：秋收起义(首举工农革命军旗帜)
 
 + 反国民党屠杀政策：广州起义
 
@@ -1215,6 +1353,8 @@
 
 + 号召：自己动手，丰衣足食
 
++ 抗日根据地的首要的、根本的任务：政权建设
+
 + 打破日军不可战胜的：平型关大捷
 
 + 合作最好：忻口战役
@@ -1241,11 +1381,13 @@
 
 + 学风问题的第一个重要问题：思想方法问题，思想态度问题，工作态度问题
 
-+ 标志着政整风运动的结束：《关于若干历史问题的决议》
++ 标志着政整风运动的结束：六届七中的《关于若干历史问题的决议》
 
 ### 解放战争
 
 + 口号：和平、民主、团结
+
++ 解放区中心工作：练兵、减租与生产
 
 + 三大战役：辽沈、淮海、平津
 
@@ -1263,6 +1405,8 @@
 
 + 自愿接受中国共产党的领导：《对时局的意见》
 
++ 毛泽东提出各民主党派应积极参政，共同建设新中国体现：民主党派地位的根本变化
+
 + 新中国奠基三个历史性文件：《中国人民政治协商会议组织法》《中华人民共和国中央人民政府组织法》《中国人民政治协商会议共同纲领》
 
 + 两个务必：务必谦虚谨慎不骄不躁，务必艰苦奋斗
@@ -1273,6 +1417,8 @@
 
 + 历次土改规模最大最好的一次，保存富农经济：《中华人民共和国土地改革法》
 
++ 抗美援朝：站起来后屹立东方的宣言书、走向伟大复兴的重要里程碑
+
 ## 思修
 
 + 世界观决定人生观、人生观决定价值观
@@ -1281,6 +1427,36 @@
 
 + 社会理想是个人理想的凝练和升华，不是简单叠加
 
-+ 社会主义核心价值观的特征：先进性、人民性、真实性
++ 社会主义核心价值观的特征：先进性、人民性(根本特性)、真实性
+
++ 先进性集中体现：社会主义所坚持和追求的价值理念
 
 + 理想特征：超越性、实践性、时代性
+
++ 信念：执着性
+
+## 23时政
+
++ 进口博览会——主题：新时代，共享未来
+
++ 进口博览会——高水平自贸试验区核心：制度建设
+
++ 习近平黑龙江讲话——方向：产业升级
+
++ 习近平黑龙江讲话——根基：实体经济
+
++ 习近平黑龙江讲话——主攻方向：现代化大农业
+
++ 习近平黑龙江讲话——首要担当：粮食稳产保供"压舱石"
+
++ 第三届一带一路高峰论坛——主题：高质量共建一带一路，携手实现共同发展
+
++ 推广枫桥经验60周年——治理基石、基本单元、基层、最后一公里：城乡社区
+
++ 二十大精神研讨班——现代化最显著特征：人口规模巨大的现代化，体现难度
+
++ 二十大精神研讨班——现代化最显著标志：人民共同富裕的现代化，本质特征
+
++ 中央金融工作会议——永恒主题：防控风险
+
++ 旧金山峰会——中美应有底色：合作共赢
