--- a/pages/A01数据库原理.md
+++ b/pages/A01数据库原理.md
@@ -1,6 +1,6 @@
 <h1 align="middle">数据库原理</h1>
 
-<div align="right">最近更新时间：2023-08-07</div>
+<div align="right">最近更新时间：2024-01-04</div>
 
 ## 关系型数据库理论
 
@@ -78,13 +78,14 @@
 
 **概念**：通过分解改造逻辑模型的关系模式。
 
-| 术语      | 表示                                 | 说明                 |
-|:-------:|:----------------------------------:|:------------------:|
-| 函数依赖    | $A→B$                              | 每个A值，都有一个唯一的B值与之对应 |
-| 完全函数依赖  | $A\quad\underrightarrow{f}\quad B$ | B依赖于全部A的值          |
-| 部分函数依赖  | $A\quad\underrightarrow{p}\quad B$ | B依赖于A的真子集          |
-| 传递函数依赖  | $A→B，B→C时，A→C$                     | \                  |
-| 非平凡函数依赖 | $A→B时，B⊄A$                         | B非A的子集             |
+| 术语      | 表示                                 | 说明             | 例          |
+|:-------:|:----------------------------------:|:--------------:|:----------:|
+| 函数依赖    | $A→B$                              | 每个A值都有唯一B值与之对应 | \          |
+| 完全函数依赖  | $A\quad\underrightarrow{f}\quad B$ | B值依赖于全部A值      | 学号→选课      |
+| 部分函数依赖  | $A\quad\underrightarrow{p}\quad B$ | B值依赖于A值的真子集    | (学号,姓名)→选课 |
+| 传递函数依赖  | $A→B，且B→C$                         | $A→C$是传递依赖     | 学号→选课→教师   |
+| 非平凡函数依赖 | $A→B，且B⊄A$                         | B值依赖且非来源于A值    | 学号→选课      |
+| 平凡函数依赖  | $A→B，且B⊆A$                         | B值依赖且来源于A值     | 学号→同桌      |
 
 | 范式        | 说明               |
 |:---------:|:----------------:|
